# trade-system

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamlfmt.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cog.toml  gen_home_pages.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-tests.yaml  docs-deploy.yaml  package-release.yaml  version-bump.yaml
configs/: rsi_backtest.yaml  rsi_grid_backtest.yaml
data/bar/MESU5.XCME-1-DAY-LAST-EXTERNAL/: 2025-07-06T00-00-00-000000000Z_2025-09-18T00-00-00-000000000Z.parquet  2025-07-14T00-00-00-000000000Z_2025-09-18T00-00-00-000000000Z.parquet
data/bar/MESU5.XCME-1-HOUR-LAST-EXTERNAL/: 2025-07-04T01-00-00-000000000Z_2025-09-19T14-00-00-000000000Z.parquet
data/bar/MESU5.XCME-1-MINUTE-LAST-EXTERNAL/: 2025-07-04T00-01-00-000000000Z_2025-08-25T09-22-00-000000000Z.parquet
docs/: gen_ref_pages.py
docs/nautilus/: deployment.md  index.md  strategy.md
docs/strategies/: option-management.md
nautilus/: index.html
nautilus/deployment/: index.html
nautilus/strategy/: index.html
reference/SUMMARY/: index.html
reference/trade_system_core/: index.html
reference/trade_system_massive/: index.html
reference/trade_system_strategies/: index.html
reference/trade_system_venues/: index.html
scripts/: add_package.py  backtest_orb.py  backtest_pmcc.py  backtest_rsi.py  backtest_rsi_grid.py  download_ibkr_data.py  download_massive_data.py  download_massive_option_data.py
search/: search_index.json
strategies/option-management/: index.html
(+67 files in other folders)
