[project]
name = "trade-system"
version = "0.1.0"
description = "my trade tools"
authors = [{name = "shawndeng", email = "shawndeng1109@qq.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14.99"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7",
    "mkdocs-literate-nav>=0.6.1",
]
